[gd_scene load_steps=6 format=3 uid="uid://cujd6swf1npeu"]

[ext_resource type="Script" uid="uid://5o36uy47soa3" path="res://scripts/world_stuff/stone_pile.gd" id="1_f8x1y"]
[ext_resource type="Texture2D" uid="uid://rn720xarg2vp" path="res://assets/World_assets/world_stuff/stone_pile1.png" id="2_1112k"]
[ext_resource type="Texture2D" uid="uid://b0m4jltv32x37" path="res://assets/World_assets/world_stuff/destroyed_stone_pile1.png" id="3_jdqmx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ullnt"]
size = Vector2(241, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uhpl6"]
size = Vector2(294, 129)

[node name="stone_pile" type="StaticBody2D" groups=["interactable"]]
y_sort_enabled = true
scale = Vector2(1.5, 1.5)
script = ExtResource("1_f8x1y")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_1112k")
offset = Vector2(0, -80)

[node name="Sprite2D2" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 15)
texture = ExtResource("3_jdqmx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5.5, -10.5)
shape = SubResource("RectangleShape2D_ullnt")

[node name="detector" type="Area2D" parent="."]
position = Vector2(0, -14)

[node name="CollisionShape2D" type="CollisionShape2D" parent="detector"]
position = Vector2(3, -10.5)
shape = SubResource("RectangleShape2D_uhpl6")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="detector" to="." method="_on_detector_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
